Fix spacing for key selling points on mobile

--- a/_sass/_homepage.scss
+++ b/_sass/_homepage.scss
@@ -164,8 +164,14 @@
                 margin-bottom: 16px;
             }
         }
+ 
         section {
             padding: 12px;
+        }
+ 
+        .homepage__key_point_title {
+            margin-top: 8px;
+            margin-bottom: 0px;
         }
     }
 }
